[build-system]
requires = ["setuptools==74.1.2"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "crossenv"
description = "A cross-compiling tool for Python extension modules"
readme = { file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.4"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Benjamin Fogle", email = "benfogle@gmail.com" }
]
maintainers = [
    { name = "Benjamin Fogle", email = "benfogle@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
    "tox",
]
test = [
    "coverage",
    "pytest",
    "pytest-xdist",
    "wheel",
]

[project.urls]
Homepage = "https://github.com/benfogle/crossenv"

[tool.setuptools]
packages = ["crossenv"]

[tool.setuptools.dynamic]
version = { attr = "crossenv.__version__" }

[tool.setuptools.package-data]
crossenv = ["scripts/*"]

[tool.coverage.run]
parallel = true
branch = true
relative_files = true
source_pkgs = ["crossenv"]

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "@(abc\\.)?abstractmethod",
    "NotImplementedError\\(\\)",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = "tests"
norecursedirs = [
    "prebuilt",
    "sources",
]
